# eamontaaffe.github.io

./: .firebaserc  .gitignore  CNAME  Gemfile  _config.yml  asset-manifest.json  bsconfig.json  cloudformation.yaml  eamons-site.cabal  gatsby-config.js  gatsby-node.js  graphql_schema.json  index.html  makefile  now.json  package.json  readme.org  site.hs  stack.yaml
_drafts/: haskell-on-lambda.md  terraform-aws-static-sites.md
_includes/: about.md  navigation.html  post.html
_layouts/: about.html  default.html  navigation.html  post.html
_posts/: 2017-05-08-caching-property.md  2017-05-26-competitive-git.md  2017-06-28-pending-tests-in-elixir.md  2017-08-01-logging-handlers.md  2017-09-27-actor-model-explanation.md  2018-12-01-last-year.md  2018-12-31-book-list.md  2019-01-14-first.md  2019-01-15-test.md  2019-04-05-custom-spark-source.md  2019-07-04-versioning-is-complicated.md  2019-07-04-versioning-sucks.md  2020-04-26-implementing-rsa.md
_sass/: main.scss
app/: Main.hs
css/: _default.scss  _front-page.scss  _index.scss  _mixins.scss  _read.scss  _snap.scss  _travel.scss  _variables.scss  _with-nav.scss  default.scss  index.scss
elm/: .gitignore  Clock.elm  elm-package.json
events/: 0.about.md  0.info.md  0.md  000.info.md  003.barbarian-days.book.md  004.the-call-of-the-wild.book.md  007.catcher-in-the-rye.book.md  008.norse-mythology.book.md  009.let-my-people-go-surfing.book.md  010.atlantis-plague.book.md  011.the-everything-store.book.md  012.the-buddha-walks-into-the-bar.book.md  013.crazy-rich-asians.book.md  014.sleeping-giants.book.md  (+43 more)
(+119 files in other folders)
