name:               eamons-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , mtl
                  , transformers
  ghc-options:      -threaded
  default-language: Haskell2010
  exposed-modules:  Site
                    Aggregate
                    About

executable site-exe
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , eamons-site
  ghc-options:      -threaded
  default-language: Haskell2010

test-suite site-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       eamons-site
                     , base
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010